# sa_ord

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yaml
src/sa_ord/: errors.rs  merge_bwt.rs  mod.rs
