[package]
authors = ["Nathan Roach <natproach@gmail.com>"]
edition = "2021"
name = "sa-ord"
publish = false
readme = "README.md"
license-file = "LICENSE.md"
description = "Pure rust implementation of the Suffix Array by Induced Sorting algorithm."
homepage = "https://github.com/NatPRoach/sa_ord"
repository = "https://github.com/NatPRoach/sa_ord"
keywords = ["sa_ord", "suffx-array", "suffix", "array", "induced sorting"]
categories = ["algorithms", "science", "text-processing"]
version = "0.0.1"

[lib]
name = "sa_ord"
path = "src/sa_ord/mod.rs"

[build-dependencies]
built = {version = "0.5", features=["git2"]}

[dependencies]
anyhow = "1.0.38"
bitvec = "1.0.0"
thiserror = "1.0.23"
itertools = "0.10.1"
